--- a/Fugit/wear/src/main/res/values/dimens.xml
+++ b/Fugit/wear/src/main/res/values/dimens.xml
@@ -2,7 +2,8 @@
 <resources>
     <dimen name="digital_text_size">40dp</dimen>
     <dimen name="digital_text_size_round">45dp</dimen>
-    <dimen name="digital_x_offset">15dp</dimen>
-    <dimen name="digital_x_offset_round">25dp</dimen>
-    <dimen name="digital_y_offset">90dp</dimen>
+    <dimen name="hours_x_offset_round">180dp</dimen>
+    <dimen name="hours_y_offset">109dp</dimen>
+    <dimen name="minutes_x_offset_round">180dp</dimen>
+    <dimen name="minutes_y_offset">159dp</dimen>
 </resources>
