--- a/Fugit/wear/src/main/res/values/colors.xml
+++ b/Fugit/wear/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="background">#000000</color>
     <color name="background2">#000088</color>
-    <color name="digital_text">#ffffff</color>
+    <color name="digital_text">#8800ff</color>
 </resources>
