--- a/Fugit/wear/src/main/res/values/colors.xml
+++ b/Fugit/wear/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="background">#0088ff</color>
     <color name="background2">#000088</color>
     <color name="digital_text">#ffffff</color>
+    <color name="analog_hands">#cccccc</color>
 </resources>
